# request-delivery

./: .gitignore  README.md
backend/: Cargo.toml  Rocket.toml  cleanup.sh  config.ini
backend/cleanup/: cleanup.py
backend/server/: Cargo.toml
backend/server/src/: auth.rs  cleanup.rs  main.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
backend/src/: auth.rs  auth_db.rs  auth_service.rs  main.rs  request_data.rs
deploy/: build.ps1
frontend/: angular.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app-routing.module.ts  app.guards.ts  app.module.ts
frontend/src/app/connection/: connection.component.html  connection.component.scss  connection.component.ts
frontend/src/app/connection/connection-info-bottom-sheet/: connection-info-bottom-sheet.component.html  connection-info-bottom-sheet.component.ts
frontend/src/app/legal/legal-bottom-sheet/: legal-bottom-sheet.component.html  legal-bottom-sheet.component.ts
frontend/src/app/legal/legal-link/: legal-link.component.html  legal-link.component.ts
frontend/src/app/main-app/: main-app.component.html  main-app.component.ts
frontend/src/app/model/: format.ts  request.ts
frontend/src/app/request/: request.component.html  request.component.ts
frontend/src/app/request-body/: request-body.component.html  request-body.component.spec.ts  request-body.component.ts
frontend/src/app/service/: auth.service.ts
frontend/src/app/url-form-table/: url-form-table.component.html  url-form-table.component.spec.ts  url-form-table.component.ts
