[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.4"
ws = { package = "rocket_ws", version = "=0.1.0-rc.4" }
dashmap = "5.5.3"
uuid = "1.5.0"
futures-channel = "0.3.29"
futures = "0.3.29"
futures-concurrency = "7.4.3"
multimap = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
config = { version = "0.13", features = ["ini"] }
lazy_static = "1.4"
nanoid = "0.4.0"
