[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rocket = { version = "0.5.0", features = ["json"] }
ws = { package = "rocket_ws", version = "0.1.0" }
dashmap = "5.5.3"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
futures-channel = "0.3.29"
futures = "0.3.29"
futures-concurrency = "7.4.3"
multimap = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
config = { version = "0.13", features = ["ini"] }
lazy_static = "1.4"
nanoid = "0.4.0"
rocket_db_pools = { version = "0.1.0", features = [
    "sqlx_sqlite",
    "sqlx_macros",
    "sqlx",
] }
# sqlx = { version = "=0.7.0", features = ["sqlite"] }
base64 = "0.21"
